--- a/DramaMore.css
+++ b/DramaMore.css
@@ -3,21 +3,38 @@
     margin: 0;
 }
 
-.container {
-    width: 90%;
+.drama_container {
+    width: 93%;
 	display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    margin-bottom: 50px;
 }
 
 
 h1 {
     color: white;
+    font-size: 50px;
+    text-align: center;
+    margin-bottom: 70px;
+    margin-top: 150px;
 
+}
+
+.btn_container{
+    width: 100%;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 150px;
 }
 
 .Morebtn {
     width: 50px;
     height: 60px;
     color: white;
+    position: relative;
+    font-size: 20px;
+    
 }
+
