--- a/components/Footer.css
+++ b/components/Footer.css
@@ -7,6 +7,7 @@
     width: 100%;
     height: 200px;
     color: white;
-    padding-left: 70px;
-    padding-top: 150px;
+    padding: 150px 0px 50px 70px;
+   
+
 }
