--- a/TopDetail.css
+++ b/TopDetail.css
@@ -5,10 +5,26 @@
 }
 
 
-.component{
-    width: 90vh;
-    height: 90vh;
+.container{
+    width: 1300px;
+    height: 900px;
     display: flex;
     align-items: center; 
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+h2{
+    color: white;
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.components {
+    width: 93%;
+	display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin-bottom: 50px;
 }
 
