--- a/components/Movie.css
+++ b/components/Movie.css
@@ -3,12 +3,16 @@
     margin: 0;
 }
 
-.poster{
+.gridcard{
     width: 200px;
     height: 300px;
     position: relative;
+    border-radius: 5%;
 }
 
+.gridcard:hover{
+    transform: scale(1.3);
+}
 
 /* Arrows */
 
