--- a/Detail/Detail.css
+++ b/Detail/Detail.css
@@ -5,11 +5,9 @@
 }
 
 .Detail {
-    height: 80vh;
     display: flex;
     justify-content: space-evenly;
-    align-content: center;
-    padding: 400px;
+    margin-top: 330px;
 }
 
 
@@ -21,7 +19,7 @@ h2{
 
 .DetailMore{
     width: 93%;
-	display: flex;
+    display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     margin-bottom: 50px;
@@ -43,8 +41,10 @@ h2{
     font-size: 20px;
 }
 
+
 .Detailbutton:hover{
     color: red;
     border-style: outset;
     border-color: red;
 }
+
