--- a/Home/Home.css
+++ b/Home/Home.css
@@ -61,7 +61,6 @@
         font-size: 21px;
         width: 100px;
         height: 50px;
-
         background-color: black;
         color: white;
     }
@@ -77,6 +76,29 @@
 
     .Header {
         width: 300px;
+        font-size: 18px;
+        color: white;
+        z-index: 3;
+    }
+    
+    .Morebtn {
+        font-size: 15px;
+        width: 70px;
+        height: 50px;
+        background-color: black;
+        color: white;
+    }
+}
+
+@media screen and (max-width:479px) {
+    .container {
+        display: flex;
+        justify-content: space-between;
+        max-width: 95%;
+    }
+
+    .Header {
+        width: 100px;
         font-size: 18px;
         color: white;
         z-index: 3;
