--- a/components/Footer.css
+++ b/components/Footer.css
@@ -3,10 +3,52 @@
     margin: 0;
 }
 
-.footer {
-    width: 100%;
-    height: 200px;
-    color: white;
-    padding: 150px 0px 50px 70px;
-   margin-bottom: 30px;
+@media screen and (min-width: 1200px){
+
+    .footer {
+        width: 100%;
+        height: 200px;
+        color: white;
+        padding: 150px 0px 50px 70px;
+       margin-bottom: 30px;
+       font-size: 15px;
+    }
+}
+
+
+
+@media screen and (min-width: 768px) and (max-width:1199px)  {
+
+    .footer {
+        width: 100%;
+        height: 200px;
+        color: white;
+        padding: 300px 0px 50px 70px;
+       margin-bottom: 30px;
+       font-size: 14px;
+    }
+}
+
+
+@media screen and (min-width: 480px) and (max-width:767px) {
+
+    .footer {
+        width: 100%;
+        height: 200px;
+        color: white;
+        padding: 100px 0px 50px 70px;
+       margin-bottom: 30px;
+       font-size: 12px;
+    }
+}
+
+@media screen and (max-width:479px) {
+
+    .footer {
+        width: 100%;
+        height: 200px;
+        color: white;
+        padding: 150px 0px 50px 20px;
+       font-size: 9px;
+    }
 }
