--- a/components/Header.css
+++ b/components/Header.css
@@ -9,11 +9,55 @@ button {
     height: 200px;
 }
 
-img {
-    width: 150px;
-    height: 150px;
-    position: absolute;
-    top: 20px;
-    left: 60px;
-    z-index: 999;
+
+
+@media screen and (min-width: 1200px){
+
+    img {
+        width: 150px;
+        height: 150px;
+        position: absolute;
+        top: 20px;
+        left: 60px;
+        z-index: 999;
+    }
+}
+
+
+
+@media screen and (min-width: 768px) and (max-width:1199px)  {
+
+    img {
+        width: 120px;
+        height: 120px;
+        position: absolute;
+        top: 20px;
+        left: 60px;
+        z-index: 999;
+    }
+}
+
+
+@media screen and (min-width: 480px) and (max-width:767px) {
+
+    img {
+        width: 90px;
+        height: 90px;
+        position: absolute;
+        top: 20px;
+        left: 60px;
+        z-index: 999;
+    }
+}
+
+@media screen and (max-width:479px) {
+
+    img {
+        width: 50px;
+        height: 50px;
+        position: absolute;
+        top: 20px;
+        left: 30px;
+        z-index: 999;
+    }
 }
