--- a/components/Detail.css
+++ b/components/Detail.css
@@ -1,18 +1,29 @@
 * {
-    box-sizing: border-box;
     margin: 0;
+    padding: 0;
 }
 
-.components_Detail {
-    margin-bottom: 150px;
+.Detail{
+    height: 100vh;
+    width: 100%;
 }
 
-.poster_Detail{
-    width: 400px;
-    height: 600px;
-    position: relative;
+.background{
+     height: 100vh;
+     width: 100%;
+     background-size: cover;
+     background-repeat: no-repeat;
+     opacity: 0.6;
+     position: relative;
 }
 
-.DetailMore{
-    
-}
+.rectangle {
+    width: 80vw;
+    height: 80vh;
+    background: rgb(128, 127, 127);
+    opacity: 0.8;
+    z-index: 999;
+    position: absolute;
+    top: 10%;
+    left: 10%;
+  }
