--- a/components/Loading.css
+++ b/components/Loading.css
@@ -1,17 +1,3 @@
-
-
-
-/* .Loading {  
-  position: fixed;
-  top: 45%;
-  left: 45%;
-  background-color: black;
-  width: 100vw;
-  height: 100vh;
-  z-index: 9999;
-} */
-
-
 .Loading{
   width: 100vw;
   height: 100vh;
@@ -21,6 +7,8 @@
 }
 
 .Loading_img{
+  width: 300px;
+  height: 300px;
   position: absolute;
   top: 45%;
   left: 45%;
