--- a/components/Detail.css
+++ b/components/Detail.css
@@ -13,7 +13,7 @@
      width: 100%;
      background-size: cover;
      background-repeat: no-repeat;
-     opacity: 0.6;
+     opacity: 0.3;
      position: relative;
      border-color: black;
 }
@@ -40,31 +40,76 @@
 }
 
 
-.MovieInfo{
-    width: 50%;
+.Info{
+    width: 40%;
     height: 80vh;
     z-index: 999;
     position: absolute;
-    top: 20%;
-    left: 41%;
+    top: 10%;
+    left: 45%;
 }
 
 
 .title{
     color: white;
     z-index: 999;
-    font-size: 55px;
+    font-size: 80px;
+    font-weight: 700;
     text-align: center;
-    margin-bottom: 60px;
+    margin-bottom: 100px;
 }
 
 
 .overview{
     color: white;
+    font-size: 27px;
     text-align: center;
+    margin-bottom: 100px;
+}
+
+.MovieInfo{
+    width: 100%;
+    height: 30%;
+    background-color: antiquewhite;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: auto;
+}
+
+h4{
+    color: orange;
+    font-size: 50px;
+    font-weight: 700;
+    text-align: center;
+    margin-bottom: 40px;
 }
 
 
-.genres{
+.date{
+    font-size: 50px;
+    text-align: center;
     color: white;
+}
+
+
+.runtime{
+    font-size: 50px;
+    text-align: center;
+    color: white;
+}
+
+
+.star{
+    font-size: 50px;
+    text-align: center;
+    color: white;
+}
+
+
+h3{
+    color: white;
+    display: flex;
+    justify-content: center;
+    margin-top: 150px;
 }
