--- a/Home/Home.css
+++ b/Home/Home.css
@@ -1,6 +1,7 @@
 * {
     box-sizing: border-box;
     margin: 0px;
+    padding: 0;
 }
 
 .Morebtn:hover {
@@ -30,8 +31,8 @@
         color: white;
         z-index: 3;
         font-size: 30px;
-        margin-bottom: 50px;
         white-space: nowrap;
+        margin-bottom: 50px;
     }
     
     .Morebtn {
