--- a/Search/Search.css
+++ b/Search/Search.css
@@ -1,31 +1,51 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+   margin: 0;
+   padding: 0;
+   border: hidden;
 }
 
+
 .input{
-    position: relative;
+    width: 100%;
+    height: 30%;
+	display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+    margin: 150px 0;
 }
+
 
 .input .inputbox{
     width: 500px;
     height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
     border-radius: 5px;
-    position: absolute;
-    top: 30px;
-    left: 50%;
-    transform: translate(-50%, 0%);
-    margin: 200px 0;
+}
+
+
+.input .inputbox:focus {
+    outline: none;
 }
 
 .input .inputReset{
-    width: 55px;
-    height: 55px;
+    width: 50px;
+    height: 50px;
     background-color: white;
-    border: none;
+    border-left: 3px solid red;
     position: absolute;
-    top: 32px;
-    left: 180px;
-    margin: 200px 0;
+    left: 57.5%;
+    top: 155px;
+} 
+
+
+.search .Movie{
+    width: 95%;
+	display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin: 50px;
 }
