--- a/components/Detail.css
+++ b/components/Detail.css
@@ -47,12 +47,17 @@ ul{
 
 .Info{
     width: 40%;
-    height: 80vh;
+    height: 80%;
     z-index: 999;
     position: absolute;
-    top: 5%;
+    top: 12%;
     left: 45%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
+
+
 
 
 .title{
@@ -61,7 +66,8 @@ ul{
     font-size: 80px;
     font-weight: 700;
     text-align: center;
-    margin-bottom: 100px;
+    margin-top: 10px;
+    margin-bottom: 50px;
 }
 
 
@@ -69,7 +75,7 @@ ul{
     color: white;
     font-size: 27px;
     text-align: center;
-    margin-bottom: 100px;
+    margin-bottom: 30px;
 }
 
 
@@ -79,7 +85,7 @@ ul{
     font-weight: 700;
     display: flex;
     justify-content: space-evenly;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
 }
 
 .Detail .genre{
@@ -89,11 +95,11 @@ ul{
 
 .MovieInfo{
     width: 100%;
-    height: 30%;
+    height: 20%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: auto;
+    
 }
 
 .Detail h4{
@@ -101,7 +107,7 @@ ul{
     font-size: 45px;
     font-weight: 700;
     text-align: center;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 
 
@@ -130,7 +136,6 @@ ul{
     color: white;
     display: flex;
     justify-content: center;
-    margin-top: 150px;
 }
 
 
