--- a/Home/Home.css
+++ b/Home/Home.css
@@ -15,6 +15,8 @@
     height: 500px;
 }
 
+
+
 .slider{
     margin-bottom: 80px;
 }
@@ -32,6 +34,9 @@
         z-index: 3;
         font-size: 30px;
         white-space: nowrap;
+    }
+
+    .Top .Header{
         margin-bottom: 50px;
     }
     
