--- a/components/Movie.css
+++ b/components/Movie.css
@@ -1,6 +1,7 @@
 * {
     box-sizing: border-box;
     margin: 0;
+    padding: 0;
 }
 
 .gridcard:hover{
@@ -9,9 +10,7 @@
 
 
 
-
 @media screen and (min-width: 1200px){
-
     .gridcard{
         width: 200px;
         height: 300px;
