--- a/components/Detail.css
+++ b/components/Detail.css
@@ -103,7 +103,7 @@ ul{
 }
 
 .Detail h4{
-    color: orange;
+    color: rebeccapurple;
     font-size: 45px;
     font-weight: 700;
     text-align: center;
