--- a/Home/Home.css
+++ b/Home/Home.css
@@ -13,14 +13,16 @@
 .Top{
     margin-top: 150px;
     height: 500px;
+    margin: 150px 150px 0px 150px;
 }
 
 .card-margin{
-    padding: 0 35px;
+    margin-left: 30px;
 }
 
 .slider{
     margin-bottom: 80px;
+    padding: 0 50px;
 }
 
 @media screen and (min-width: 1200px){
