--- a/components/Header.css
+++ b/components/Header.css
@@ -7,6 +7,7 @@
 button {
     width: 100px;
     height: 100px;
+
 }
 
 
@@ -33,6 +34,19 @@ button {
         position: absolute;
         top: 60px;
         left: 93vw;
+        z-index: 999;
+    }
+
+    .Header .Login{
+        width: 20px;
+        height: 20px;
+        color: white;
+        font-size: 20px;
+        background-color: transparent;
+        background-repeat: no-repeat;
+        position: absolute;
+        top: 68px;
+        left: 88vw;
         z-index: 999;
     }
 }
