--- a/Login/Login.css
+++ b/Login/Login.css
@@ -25,7 +25,7 @@
 
 .Hello-Netflix{
     background: rgb(255,79,40);
-background: linear-gradient(159deg, rgba(255,79,40,1) 0%, rgba(255,0,0,1) 57%);
+    background: linear-gradient(159deg, rgba(255,79,40,1) 0%, rgba(255,0,0,1) 57%);
     width: 25vw;
     height: 50vh;
     display: flex;
@@ -50,11 +50,26 @@ background: linear-gradient(159deg, rgba(255,79,40,1) 0%, rgba(255,0,0,1) 57%);
 }
 
 input {
+    width: 60px;
+    height: 55px;
+    padding: 20px;
     background-color: #eee;
     border: none;
-    padding: 12px 15px;
+    border-radius: 10px;
     width: 100%;
   }
+
+input:focus {
+    outline: 2px solid red;
+}
+
+
+.ErrorMessage {
+    margin-top: 5px;
+    color: red;
+    font-size: 12px;
+}
+
   
 .Login button {
   height: 50px;
@@ -64,7 +79,6 @@ input {
   color: #FFFFFF;
   font-size: 12px;
   font-weight: bold;
-  margin-top: 30px;
   letter-spacing: 1px;
   text-transform: uppercase;
   transition: transform 80ms ease-in;
