--- a/components/Banner.css
+++ b/components/Banner.css
@@ -1,208 +1,51 @@
 * {
     box-sizing: border-box;
     margin: 0;
-}
-
-
-
-/* Arrows */
-
-.slick-prev {
-    z-index: 9999;
-  }
-
-.slick-prev,
-.slick-next
-{
-    font-size: 50px;
-    line-height: 50px;
-    position: absolute;
-    top: 45%;
-    left: 97%;
-    right: 97%;
-   
-    display: block;
-    width: 50px;
-    height: 50px;
-
-
-    -webkit-transform: translate(0, -50%);
-    -ms-transform: translate(0, -50%);
-    transform: translate(0, -50%);
-    cursor: pointer;
-    color: transparent;
-    border: none;
-    outline: none;
-    background: transparent;
-    border-radius: 50%;
-}
-
-
-.slick-prev:hover,
-.slick-prev:focus,
-.slick-next:hover,
-.slick-next:focus
-{
-    color: transparent;
-    outline: none;
-    background: transparent;
-}
-.slick-prev:hover:before,
-.slick-prev:focus:before,
-.slick-next:hover:before,
-.slick-next:focus:before
-{
-    opacity: 1;
-}
-.slick-prev.slick-disabled:before,
-.slick-next.slick-disabled:before
-{
-    opacity: .25;
-}
-
-.slick-prev:before,
-.slick-next:before
-{
-    font-family: 'slick';
-    font-size: 20px;
-    line-height: 1;
-
-    opacity: .75;
-    color: white;
-
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
-
-.slick-prev
-{
-    left: 10px;
-}
-[dir='rtl'] .slick-prev
-{
-    right: -25px;
-    left: auto;
-}
-.slick-prev:before
-{
-    content: '<';
-}
-[dir='rtl'] .slick-prev:before
-{
-    content: '>';
-}
-
-.slick-next
-{
-    right: -25px;
-}
-[dir='rtl'] .slick-next
-{
-    right: auto;
-    left: -25px;
-}
-.slick-next:before
-{
-    content: '>';
-}
-[dir='rtl'] .slick-next:before
-{
-    content: '<';
-}
-
-/* Dots */
-.slick-dotted.slick-slider
-{
-    margin-bottom: 30px;
-}
-
-.slick-dots
-{
-    position: absolute;
-    bottom:  250px;
-
-    display: block;
-
-    width: 100%;
     padding: 0;
-    margin: 0;
-
-    list-style: none;
-
-    text-align: center;
-
-    z-index: 9999;
 }
-.slick-dots li
-{
+body {
+    height: 100vh;
+}
+
+
+.Bannercontainer {
     position: relative;
-
-    display: inline-block;
-
-    width: 20px;
-    height: 20px;
-    margin: 0 5px;
-    padding: 0;
-
-    cursor: pointer;
+    width: 100%;
+    overflow: hidden;
+    padding-top: 56.25%; 
+    z-index: 1;
 }
-.slick-dots li button
-{
-    font-size: 20px;
-    line-height: 0;
 
-    display: block;
-
-    width: 20px;
-    height: 20px;
-    padding: 5px;
-
-    cursor: pointer;
-
-    color: transparent;
-    border: 0;
-    outline: none;
-    background: transparent;
-}
-.slick-dots li button:hover,
-.slick-dots li button:focus
-{
-    outline: none;
-}
-.slick-dots li button:hover:before,
-.slick-dots li button:focus:before
-{
-    opacity: 1;
-}
-.slick-dots li button:before
-{
-    font-family: 'slick';
-    font-size: 6px;
-    line-height: 20px;
-
+.Bannerimage {
     position: absolute;
     top: 0;
     left: 0;
-
-    width: 20px;
-    height: 20px;
-
-    content: '●';
-    text-align: center;
-
-    opacity: .25;
-    color: white;
-    padding: ;
-
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
-.slick-dots li.slick-active button:before
-{
-    opacity: 1;
-    color: white;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
+.Bannertitle {
+    position: absolute;
+    max-width: 1000px;
+    top: 70%;
+    left: 10%;
+    transform: translate(-10%, -10%);
+    font-size: 2.5vw;
+    color: white;
+    z-index: 999;
+}
 
-
-
+.BannerExplanation {
+    width: 35vw;
+    position: absolute;
+    top: 78%;
+    left: 11%;
+    transform: translate(-10%, -10%);
+    font-size: 1.5vw;
+    color: white;
+    z-index: 999;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
