--- a/components/Footer.css
+++ b/components/Footer.css
@@ -3,31 +3,30 @@
     margin: 0;
 }
 
-@media screen and (min-width: 1200px){
 
-    .footer {
-        width: 100%;
-        height: 200px;
-        color: white;
-        padding: 150px 0px 50px 70px;
-       margin-bottom: 30px;
-       font-size: 10px;
-    }
+
+.footer {
+    width: 100%;
+    height: 200px;
+    color: white;
+    padding-top: 200px;
+    margin-bottom: 20px;
+    font-size: 10px;
+    float: left;
+    text-align: center;
+    line-height: 50px;
 }
 
 
+.footer img{
 
-@media screen and (min-width: 768px) and (max-width:1199px)  {
-
-    .footer {
-        width: 100%;
-        height: 200px;
-        color: white;
-        padding: 300px 0px 50px 70px;
-       margin-bottom: 30px;
-       font-size: 8px;
-    }
+    width: 15px;
+    height: 15px;
 }
 
-
-
+@media screen and (max-width: 1199px){
+    .footer {
+        padding-top: 500px;
+        
+    }
+}
