--- a/components/Header.css
+++ b/components/Header.css
@@ -11,81 +11,38 @@ button {
 }
 
 
-
-@media screen and (min-width: 1200px){
-
-    .Header{
-        width: 100vh;
-        height: 0px;
-    }
-
-    .Header .logo {
-        width: 100px;
-        height: 100px;
-        position: absolute;
-        top: 20px;
-        left: 60px;
-        z-index: 999;
-    }
-
-    .Header .search {
-        width: 50px;
-        height: 50px;
-        position: absolute;
-        top: 60px;
-        left: 93vw;
-        z-index: 999;
-    }
-
-    .Header .Login{
-        width: 20px;
-        height: 20px;
-        color: white;
-        font-size: 20px;
-        background-color: transparent;
-        background-repeat: no-repeat;
-        position: absolute;
-        top: 68px;
-        left: 88vw;
-        z-index: 999;
-    }
+.Header {
+    width: 100vh;
+    height: 0px;
 }
 
-
-
-@media screen and (min-width: 768px) and (max-width:1199px)  {
-
-    img {
-        width: 120px;
-        height: 120px;
-        position: absolute;
-        top: 20px;
-        left: 60px;
-        z-index: 999;
-    }
+.Header .logo {
+    width: 7vw;
+    height: 2.5vw;
+    position: absolute;
+    top: 4vh;
+    left: 4vw;
+    z-index: 999;
 }
 
-
-@media screen and (min-width: 480px) and (max-width:767px) {
-
-    img {
-        width: 90px;
-        height: 90px;
-        position: absolute;
-        top: 20px;
-        left: 60px;
-        z-index: 999;
-    }
+.Header .search {
+    width: 3vw;
+    height: 3vw;
+    position: absolute;
+    top: 4vh;
+    left: 90vw;
+    z-index: 999;
 }
 
-@media screen and (max-width:479px) {
-
-    img {
-        width: 50px;
-        height: 50px;
-        position: absolute;
-        top: 20px;
-        left: 30px;
-        z-index: 999;
-    }
+.Header .Login {
+    width: 20px;
+    height: 20px;
+    color: white;
+    font-size: 20px;
+    background-color: transparent;
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 68px;
+    left: 88vw;
+    z-index: 999;
 }
