--- a/components/Search.css
+++ b/components/Search.css
@@ -4,16 +4,16 @@
     padding: 0;
 }
 
-.gridcardLink{
-    height: 89vw;
+.Search_gridcardLink{
     position: relative;
-    padding-top: 75%; 
     z-index: 1;
+    width: 20vw;
+    margin: 1vw auto;
     
 }
 
-.gridcard{
-    width: 98%;
+.Search_gridcard{
+    width: 100%;
     height: 100%;
     border-radius: 5%;
 }
