--- a/Home/Home.css
+++ b/Home/Home.css
@@ -4,137 +4,58 @@
     padding: 0;
 }
 
+.Home{
+    width: 90%;
+    position: relative;
+    top: 0;
+    left: 10%;
+    transform: translate(-5%, 0%);
+
+}
+
+.Home .container{
+    width: 90%;
+    margin-top: 3vw;
+}
+
+.Header_container{
+    height: 5vw;
+    display: flex;
+    justify-content: space-between;
+}
+
+.Header_container .Header {
+    color: white;
+    z-index: 3;
+    font-size: 2.3vw;
+ 
+}
+
+.Morebtn {
+    font-size: 1.5vw;
+    width: 7vw;
+    height: 4vw;
+    background-color: black;
+    color: white;
+    
+}
+
 .Morebtn:hover {
     color: red;
     border-style: outset;
     border-color: red;
 }
 
-.Home{
-    margin-top: 150px;
-    height: 500px;
-    margin: 0px 150px;
-    display: block;
-}
 
-.Home.Top{
-    margin-top: 150px;
-}
+@media screen and (max-width:480px) {
 
-.Movies{
-    margin: 50px;
-    height: 50%;
-    display: inline;
-    text-align: center;
-}
+ 
+    .BgImg{
+        width: 100vw;
+        height: auto;
+        overflow: hidden;
+    }
 
 
-.slider{
-    margin-bottom: 80px;
-    padding: 0 60px;
     
-}
-
-
-@media screen and (min-width: 1200px){
-    .container {
-        display: flex;
-        justify-content: space-between;
-        margin: 30px 40px;
-        max-width: 95%;
-    }
-
-    .Header {
-        color: white;
-        z-index: 3;
-        font-size: 30px;
-        white-space: nowrap;
-    }
-
-    .Top .Header{
-        margin-bottom: 50px;
-    }
-    
-    .Morebtn {
-        font-size: 25px;
-        width: 150px;
-        height: 50px;
-        background-color: black;
-        color: white;
-    }
-}
-
-
-
-@media screen and (min-width: 768px) and (max-width:1199px)  {
-    .container {
-        display: flex;
-        justify-content: space-between;
-        max-width: 95%;
-    }
-
-    .Header {
-        width: 300px;
-        font-size: 24px;
-        color: white;
-        z-index: 3;
-        white-space: nowrap;
-    }
-    
-    .Morebtn {
-        font-size: 21px;
-        width: 100px;
-        height: 50px;
-        background-color: black;
-        color: white;
-    }
-}
-
-
-@media screen and (min-width: 480px) and (max-width:767px) {
-    .container {
-        display: flex;
-        justify-content: space-between;
-        max-width: 95%;
-    }
-
-    .Header {
-        width: 300px;
-        font-size: 18px;
-        color: white;
-        z-index: 3;
-        white-space: nowrap;
-    }
-    
-    .Morebtn {
-        font-size: 15px;
-        width: 70px;
-        height: 50px;
-        background-color: black;
-        color: white;
-    }
-}
-
-@media screen and (max-width:479px) {
-    .container {
-        display: flex;
-        justify-content: space-between;
-        max-width: 95%;
-    }
-
-    .Header {
-        width: 100px;
-        font-size: 18px;
-        color: white;
-        z-index: 3;
-        white-space: nowrap;
-    }
-    
-    .Morebtn {
-        font-size: 15px;
-        width: 70px;
-        height: 50px;
-        background-color: black;
-        color: white;
-    }
 }
